jlamontSC-test/src/objects/User_Lookups__c.object
<CustomObject>
    <fields>
        <fullName>Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Club Entity object, filtered for Chapters.</description>
        <label>Chapter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Club_Entity__c.Type__c</field>
                <operation>equals</operation>
                <value>Chapter</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Club_Entity__c</referenceTo>
        <relationshipLabel>Chapter Users</relationshipLabel>
        <relationshipName>User_Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>User Lookups</relationshipLabel>
        <relationshipName>User_Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Lookups</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Contact__c</columns>
        <columns>Chapter__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UL-{0000000}</displayFormat>
        <label>User Lookups Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>